[project]
name = "redlineenv"
version = "2.0.0"
description = "OpenEnv evaluation environment for AI agent safety benchmarking"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyyaml",
    "requests",
    "openai",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[openenv]
name = "RedlineEnv"
tag = "openenv"
entry_point = "server.app:main"
inference = "inference.py"
